@@ -77,8 +77,7 @@ function showArchiveLinks() {
       let archive_array = {
         'Archive.today': 'https://archive.today?run=1&url=' + url_enc,
         'Google webcache': 'https://webcache.googleusercontent.com/search?q=cache:' + url_enc,
-        '12ft.io': 'https://12ft.io/' + url,
-        'Google Search Tool\n(use online html-viewer - no fix)': 'https://search.google.com/test/rich-results?url=' + url_enc
+        '12ft.io': 'https://12ft.io/' + url
       };
       let archive_id = document.querySelector('span#archive');
       if (archive_id) {
@@ -87,7 +86,7 @@ function showArchiveLinks() {
           let elem_div = document.createElement('div');
           let elem = document.createElement('a');
           elem.innerText = key;
-          if (!(matchDomain(['12ft.io', 'google.com', 'googleusercontent.com'], hostname) || hostname.match(/^archive\.\w{2}$/))) {
+          if (!(matchDomain(['12ft.io', 'googleusercontent.com'], hostname) || hostname.match(/^archive\.\w{2}$/))) {
             elem.href = archive_array[key];
             elem.target = '_blank';
             elem_div.appendChild(elem);
